--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
     "noEmit": true,
     "downlevelIteration": true
     // "strict": true
