--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
+    "fork-ts-checker-webpack-plugin": "^0.2.8",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.7.0",
@@ -78,9 +79,11 @@
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-typescript": "^0.8.1",
     "rollup-stream": "^1.19.0",
+    "ts-loader": "^2.3.6",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^3.5.6"
   }
 }
