--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2015",
-    "module": "commonjs",
+    "target": "es5",
+    "module": "system",
     "allowSyntheticDefaultImports": true,
     "noEmit": true,
     "downlevelIteration": true
