--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "jsnext:main": "dist/js/framework7.module.js",
   "module": "dist/js/framework7.module.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=development gulp build",
-    "dist": "cross-env NODE_ENV=production gulp build",
-    "dev": "cross-env NODE_ENV=development gulp build && cross-env NODE_ENV=development gulp ks && gulp server",
-    "prod": "cross-env NODE_ENV=production gulp ks && gulp server",
+    "build": "cross-env NODE_ENV=development ./node_modules/.bin/webpack",
+    "dist": "cross-env NODE_ENV=production ./node_modules/.bin/webpack & ./node_modules/.bin/uglifyjs --compress build/js/framework7.js",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/webpack --watch",
     "test": "npm run build"
   },
   "repository": {
@@ -52,38 +51,17 @@
   "dependencies": {
     "dom7": "^1.6.4",
     "global": "^4.3.2",
-    "gulp-cli": "^1.4.0",
     "template7": "^1.2.5"
   },
   "devDependencies": {
     "cross-env": "^5.0.5",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
     "diff": "^3.2.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-clean-css": "^3.7.0",
-    "gulp-connect": "^5.0.0",
-    "gulp-header": "^1.8.8",
-    "gulp-less": "^3.3.0",
-    "gulp-modify-file": "^0.1.0",
-    "gulp-open": "^2.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-typescript": "^3.2.2",
-    "gulp-uglify": "^2.1.2",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-stream": "^1.19.0",
     "ts-loader": "^2.3.6",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "uglify-js": "^3.1.0",
     "webpack": "^3.5.6"
   }
 }
