--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,20 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "system",
+    "module": "es2015",
     "allowSyntheticDefaultImports": true,
     "noEmit": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "sourceMap": true,
+    "declaration": true,
+    "declarationDir": "./build/js/"
     // "strict": true
     // "noImplicitAny": true,
     // "strictNullChecks": true,
     // "noImplicitThis": true,
     // "alwaysStrict": true,
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
